Fix overlapping imggame-users and remove modal on imgame page

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -117,6 +117,9 @@ blockquote {
   border-radius: 5px;
   color: #FFF;
 }
+.imgame-user-card {
+    display: inline-block;
+}
 .imgameUser {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -124,7 +127,7 @@ blockquote {
   text-align: center;
   background-color: #4d4d4d;
   width: 180px;
-  height: 220px;
+  height: 130px;
   transition: opacity 0.3s;
   border-radius: 10px;
   overflow: auto;
